fixes index posts tag spacing

--- a/app/assets/stylesheets/layouts/posts-index.scss
+++ b/app/assets/stylesheets/layouts/posts-index.scss
@@ -14,6 +14,7 @@
   .posts-avatar {
     float: left;
     margin-right: 13px;
+    padding-bottom: 10px;
 
     img {
       width: 35px;
@@ -22,7 +23,7 @@
   }
 
   .posts-body {
-    padding: 5px 10px 20px 10px;
+    padding: 5px 10px 0px 10px;
   }
 
   .posts-content {
@@ -44,5 +45,14 @@
   .posts-tags {
     @include font-size(13px);
     color: darken($border, 25%);
+
+    a {
+      color: $dark-blue;
+    }
   }
 }
+
+
+
+
+
